--- a/AdvancedScratch.html
+++ b/AdvancedScratch.html
@@ -38,7 +38,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="Home.html">
                         <img src="assets/images/tlz-logo-122x55.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -47,10 +47,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
-                        About Us</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page2.html">Our Journey<br></a><a class="text-black dropdown-item display-4" href="page3.html" aria-expanded="false">Our Values<br></a><a class="text-black dropdown-item display-4" href="page4.html" aria-expanded="false">Our Mission</a><a class="text-black dropdown-item display-4" href="page5.html" aria-expanded="false">Our Approach</a><a class="text-black dropdown-item display-4" href="page1.html" aria-expanded="false">Our Team</a></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="page6.html#content1-1h" data-toggle="dropdown-submenu" aria-expanded="true">
-                        Students</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page6.html#content5-28" aria-expanded="false">Discover</a><a class="text-black dropdown-item display-4" href="page6.html#content5-2e" aria-expanded="false">Enquire</a><a class="text-black dropdown-item display-4" href="page6.html#content5-2h" aria-expanded="false">Create</a><a class="text-black dropdown-item display-4" href="page6.html#content5-2k" aria-expanded="false">Innovate</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com" aria-expanded="false">Professionals</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page8.html" aria-expanded="false">Corporate</a></li>
+                    <a class="nav-link link text-black display-4" href="AboutUS.html" aria-expanded="false">
+                        About Us</a>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="Programs.html#menu2-h" data-toggle="dropdown-submenu" aria-expanded="false">
+                        Students</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="Programs.html#content5-28" aria-expanded="false">Discover</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2e" aria-expanded="false">Enquire</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2h" aria-expanded="false">Create</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2k" aria-expanded="false">Innovate</a><a class="text-black dropdown-item display-4" href="Schools.html" aria-expanded="false">Schools</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top" aria-expanded="false">Professionals</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Corporat.html" aria-expanded="false">Corporate</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
                         Events</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="https://mobirise.com">Demo day</a></div>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/m">site design templates</a></section><section class="features14 cid-qU3nlkC4MF" id="features14-30">
+<section class="engine"><a href="https://mobirise.me/x">css templates</a></section><section class="features14 cid-qU3nlkC4MF" id="features14-30">
     
     
 
@@ -129,7 +129,7 @@
             </div>
             <div class="media-container-row image-row">
                 <div class="mbr-figure" style="width: 25%;">
-                    <img src="assets/images/013.jpg" alt="Mobirise">
+                    <img src="assets/images/010.jpg" alt="Mobirise">
                 </div>
             </div>
         </div>
