--- a/TinkeringTech.html
+++ b/TinkeringTech.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="Home.html">
                         <img src="assets/images/tlz-logo-122x55.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -48,10 +48,10 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
-                        About Us</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page2.html">Our Journey<br></a><a class="text-black dropdown-item display-4" href="page3.html" aria-expanded="false">Our Values<br></a><a class="text-black dropdown-item display-4" href="page4.html" aria-expanded="false">Our Mission</a><a class="text-black dropdown-item display-4" href="page5.html" aria-expanded="false">Our Approach</a><a class="text-black dropdown-item display-4" href="page1.html" aria-expanded="false">Our Team</a></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="page6.html#content1-1h" data-toggle="dropdown-submenu" aria-expanded="true">
-                        Students</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page6.html#content5-28" aria-expanded="false">Discover</a><a class="text-black dropdown-item display-4" href="page6.html#content5-2e" aria-expanded="false">Enquire</a><a class="text-black dropdown-item display-4" href="page6.html#content5-2h" aria-expanded="false">Create</a><a class="text-black dropdown-item display-4" href="page6.html#content5-2k" aria-expanded="false">Innovate</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobirise.com" aria-expanded="false">Professionals</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page8.html" aria-expanded="false">Corporate</a></li>
+                    <a class="nav-link link text-black display-4" href="AboutUS.html" aria-expanded="false">
+                        About Us</a>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="Programs.html#menu2-h" data-toggle="dropdown-submenu" aria-expanded="false">
+                        Students</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="Programs.html#content5-28" aria-expanded="false">Discover</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2e" aria-expanded="false">Enquire</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2h" aria-expanded="false">Create</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2k" aria-expanded="false">Innovate</a><a class="text-black dropdown-item display-4" href="Schools.html" aria-expanded="false">Schools</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top" aria-expanded="false">Professionals</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Corporat.html" aria-expanded="false">Corporate</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
                         Events</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="https://mobirise.com">Demo day</a></div>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/q">responsive web templates</a></section><section class="features14 cid-qU3locFyp0" id="features14-2o">
+<section class="engine"><a href="https://mobirise.me/p">site templates free download</a></section><section class="features14 cid-qU3locFyp0" id="features14-2o">
     
     
 
@@ -133,7 +133,7 @@
             </div>
             <div class="media-container-row image-row">
                 <div class="mbr-figure" style="width: 25%;">
-                    <img src="assets/images/013.jpg" alt="Mobirise">
+                    <img src="assets/images/010.jpg" alt="Mobirise">
                 </div>
             </div>
         </div>
@@ -187,7 +187,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="4l4LrZvVHQ7JD65XiuBObCn67ybyPh/H3oL7IdoBWpp0cB3dHze8ef28D+3uUtabm3VPZNszhn7uSvaP473/HPoNMXSQisqEYTxmPxurHZ+ssS7j1v2IO4OHrMpqG1Of" data-form-email="true">
+                        <input type="hidden" value="jDGVUwK1rUBIHI3W/r5pW4rgA1jPxtPdZ1NxLI7OmLwMoWJgyvgREekewpwD9I3GJ5GNS/xLYULSDGJDoTJF8/jcmuYybevX+Vr96UPN4uICNAdftuw41MJyymPlBA4Z" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer4-3g">
                         </div>
@@ -305,7 +305,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="JtVx102GK5iThFSYeFDlmhnghPEowApbW4jdYvNmqltqu3sdmV90PovnfAy369suErfFX1C3i5YoW/45WARkC9MVrLxrZ7itmrp/6I/CyisJuQ/wHDQhOnFy7yqqQeI7" data-form-email="true">
+                        <input type="hidden" value="4bAQYEYscj50yExblqtzYNJbiMKpnjnOTYbPpI28GDUCJJFQzP37skXuLjdeE/hV2k2Nab0SWS5xX9ZyyCU07/imphjRN5q6CRyOkgyu3o6VfloSWIWS6ek8iuUT3W49" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-3i">
                         </div>
