--- a/Programs.html
+++ b/Programs.html
@@ -38,8 +38,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="Home.html">
-                        <img src="assets/images/tlz-logo-122x55.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                    <a href="index.html">
+                        <img src="assets/images/tlz-logo-122x55.png" alt="TLZ" title="Tech Learning Zone" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -50,7 +50,7 @@
                     <a class="nav-link link text-black display-4" href="AboutUS.html" aria-expanded="false">
                         About Us</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="Programs.html#menu2-h" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Students</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="Programs.html#content5-28" aria-expanded="false">Discover</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2e" aria-expanded="false">Enquire</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2h" aria-expanded="false">Create</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2k" aria-expanded="false">Innovate</a><a class="text-black dropdown-item display-4" href="Schools.html" aria-expanded="false">Schools</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top" aria-expanded="false">Professionals</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Corporat.html" aria-expanded="false">Corporate</a></li>
+                        Students</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="Programs.html#content5-28" aria-expanded="false">Discover</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2e" aria-expanded="false">Enquire</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2h" aria-expanded="false">Create</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2k" aria-expanded="false">Innovate</a><a class="text-black dropdown-item display-4" href="Schools.html" aria-expanded="false">Schools</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Professional.html" aria-expanded="false">Professionals</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Corporat.html" aria-expanded="false">Corporate</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
                         Events</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="https://mobirise.com">Demo day</a></div>
@@ -85,7 +85,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/01.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-492x328.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -101,7 +101,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/02.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-1-492x328.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -117,7 +117,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/03.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-4-492x738.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -133,7 +133,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/01.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-492x272.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
