--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="Home.html">
-                        <img src="assets/images/tlz-logo-122x55.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                    <a href="index.html">
+                        <img src="assets/images/tlz-logo-122x55.png" alt="TLZ" title="Tech Learning Zone" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -51,7 +51,7 @@
                     <a class="nav-link link text-black display-4" href="AboutUS.html" aria-expanded="false">
                         About Us</a>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="Programs.html#menu2-h" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Students</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="Programs.html#content5-28" aria-expanded="false">Discover</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2e" aria-expanded="false">Enquire</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2h" aria-expanded="false">Create</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2k" aria-expanded="false">Innovate</a><a class="text-black dropdown-item display-4" href="Schools.html" aria-expanded="false">Schools</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="#top" aria-expanded="false">Professionals</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Corporat.html" aria-expanded="false">Corporate</a></li>
+                        Students</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="Programs.html#content5-28" aria-expanded="false">Discover</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2e" aria-expanded="false">Enquire</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2h" aria-expanded="false">Create</a><a class="text-black dropdown-item display-4" href="Programs.html#content5-2k" aria-expanded="false">Innovate</a><a class="text-black dropdown-item display-4" href="Schools.html" aria-expanded="false">Schools</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Professional.html" aria-expanded="false">Professionals</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Corporat.html" aria-expanded="false">Corporate</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-black dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">
                         Events</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="https://mobirise.com">Demo day</a></div>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/x">css templates</a></section><section class="header1 cid-qWbEZ6E0Lr" id="header1-4c">
+<section class="engine"><a href="https://mobirise.me/o">free one page site templates</a></section><section class="header1 cid-qWbEZ6E0Lr" id="header1-4c">
 
     
 
@@ -103,7 +103,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/010.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-492x328.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -119,7 +119,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/021.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-1-492x328.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -135,7 +135,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/032.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-3-492x738.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -151,7 +151,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/010.jpg" alt="Mobirise">
+                        <img src="assets/images/mbr-3-492x272.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
